[package]
name = "libbig"
version = "0.1.0"
license = "MIT"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]

[dependencies]
byteorder = "1.0.0"
clippy = { version = "*", optional = true }

neon = { git = "https://github.com/neon-bindings/neon.git", optional = true }
neon-build = { version = "0.1.11", optional = true }